objects/XYZ_Custom__c.object
<CustomObject>
    <fields>
        <fullName>Account_Email__c</fullName>
        <label>Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>XYZ Custom</relationshipLabel>
        <relationshipName>XYZ_Custom</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>XYZ Custom</relationshipLabel>
        <relationshipName>XYZ_Custom</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Valor1__c</fullName>
        <label>Valor1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valor2__c</fullName>
        <label>Valor2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>XYZ Custom</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>XYZ Custom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XYZ Custom</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>